# bigquery_optimizer

./: .env.example  .gitignore  AGENT_API_DEPLOYMENT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  IMPLEMENTATION_PLAN.md  PRODUCTION_DEPLOYMENT.md  README.md  SECURE_DEPLOYMENT.md  agent-api-flow.md  deploy-remote.sh  deploy.sh  deploy_local.sh  deployment-info.txt  deployment-secure-info.txt  destroy.sh  docker-compose.yml  iap-setup.sh  project-analysis-flow-simplified.md  project-analysis-flow.md  project-analysis-sequence-simple.md  start.sh  validate_deployment.sh
backend/: .env  .env.example  ARCHITECTURE.md  Procfile  REFACTORING_SUMMARY.md  SETUP_COMPLETE.md  deploy_agent_engine.py  metadata_coverage_summary.md  pyproject.toml  requirements.txt  requirements_simple.txt  start.sh  start_server.py  test_adk_complete.py  test_agent.py  test_agent_metadata.py  test_exact_query.py  test_metadata_agent.py  test_metadata_extraction.py  test_setup.py  test_view_with_underlying.py  test_wildcard_query.py  view_metadata_output.json
backend/agents/bigquery_executor/: agent.yaml
backend/app/: __init__.py  adk_agent.py  agent.py  agent_pipeline.py  auth.py  bigquery_metadata.py  bq_anti_patterns.yaml  config.py  firestore_rules.py  main.py  models.py  multi_agent.py  rule_based_agent.py  rules.py  streaming_agent.py  structured_agent.py  tracing.py
backend/app/agents/: __init__.py  callbacks.py  final_reporter.py  metadata.py  (+8 more)
backend/bigquery_optimizer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/schemas/: create_tables.sql
(+104 files in other folders)
